--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -42,3 +42,13 @@
   background: rgba(0, 0, 0, 0.8);
   cursor: pointer;
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+}
