--- a/src/styles/player.css
+++ b/src/styles/player.css
@@ -14,10 +14,18 @@
   background: rgba(0, 0, 0, 0.8);
 }
 
+.userCount {
+  position: absolute;
+  bottom: 0;
+  right: 10px;
+}
+
 .sidebar-menu {
   width: 100%;
   height: 40px;
   background: black;
+  margin-top: 108px;
+
 }
 
 .sidebar-menu div {
@@ -67,6 +75,9 @@
 .searchCards {
 max-height: calc(100% - 205px);
 overflow-y: scroll;
+position: absolute;
+top: 200px;
+bottom: 68px;
 }
 
 .card {
@@ -81,13 +92,21 @@ overflow-y: scroll;
 }
 
 #vidTitle {
+  position: absolute;
   width: 100%;
+  height: 107px;
   margin-top: 0;
-  padding: 15px 0;
+  padding: 0;
   text-align: center;
   background: #505050;
   color: white;
   margin: 0;
+}
+
+#vidTitle h2 {
+  max-height: 86px;
+  overflow: auto;
+  padding: 0 5px;
 }
 
 .sidbar {
@@ -100,14 +119,11 @@ overflow-y: scroll;
 .vidInput {
   width: 60%;
   border: 0;
-  padding: 10px 0;
+  padding: 8px 0;
   margin: 0;
   text-align: center;
   font-size: 20px;
-}
-
-#url:focus {
-  outline: none;
+  outline: 0;
 }
 
 .addVideoButton {
@@ -128,7 +144,6 @@ overflow-y: scroll;
   width: 100%;
   border: none;
   color: white;
-  padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   font-size: 30px;
