--- a/src/styles/player.css
+++ b/src/styles/player.css
@@ -29,7 +29,7 @@
 }
 
 .sidebar-menu div {
-  width: 50%;
+  width: calc(100% / 3);
   display: inline-block;
   text-align: center;
   color: white;
