--- a/src/styles/player.css
+++ b/src/styles/player.css
@@ -14,6 +14,12 @@
   background: rgba(0, 0, 0, 0.8);
 }
 
+.joinUrl {
+  position: absolute;
+  bottom: 0;
+  left: 10px;
+}
+
 .userCount {
   position: absolute;
   bottom: 0;
