--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,16 +3,19 @@
 
 * {
   font-family: 'Baloo', cursive;
+  margin: 0;
+  padding: 0;
+  /* overflow: hidden; */
 }
 
 .container {
-  height: 100%;
   width: 100%;
-  left:0;
+  left: 0;
   right: 0;
   top: 0;
   bottom: 0;
   position: absolute;
+  overflow-x: hidden;
 }
 
 .bottom {
@@ -50,5 +53,101 @@
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888; 
+  background: #888;
+}
+
+.content {
+  /* transform: rotate(-10deg); */
+  position: absolut e;
+  width: 100%;
+  margin-top: 50px;
+}
+
+.content .joinRoom {
+  /* transform: rotate(10deg); */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.content .makeRoom {
+  /* transform: rotate(10deg); */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.header {
+  min-height: 400px;
+  padding: 200px 200px 0 200px;
+  margin-top: -200px;
+  margin-left: -200px;
+  font-size: 5vmin;
+  background: #00f8ff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  transform: rotate(-5deg);
+  border-bottom: 2px solid green;
+}
+
+.header div {
+  transform: rotate(5deg);
+
+}
+
+.header div h1 {
+  color: red;
+  animation: mymove 3s infinite ease-out;
+  transition: 3s;
+}
+
+.homeButton {
+  margin: 20px;
+  padding: 20px;
+  transform: skewX(-45deg);
+  transition: 1s;
+}
+
+.homeButton p {
+  font-size: 15px;
+  transform: skewX(45deg);
+}
+
+.homeButton:hover {
+  background: linear-gradient(124deg, #ff2400, #e81d1d, #e8b71d, #e3e81d, #1de840, #1ddde8, #2b1de8, #dd00f3, #dd00f3);
+  background-size: 1800% 1800%;
+  
+  -webkit-animation: rainbow 5s ease infinite;
+  -z-animation: rainbow 5s ease infinite;
+  -o-animation: rainbow 5s ease infinite;
+    animation: rainbow 5s ease infinite;
+}
+
+@-webkit-keyframes mymove {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  5% {
+    transform: rotate(-5deg);
+  }
+
+  10% {
+    transform: rotate(5deg);
+  }
+
+  15% {
+    transform: rotate(-5deg);
+
+  }
+
+  20% {
+    transform: rotate(5deg);
+  }
+
+  25% {
+    transform: rotate(0deg);
+  }
 }
